--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Appraisal</title>
 </head>
 <body>
-    <h4>Copy and paste this magic text in your notepad to learn how to get more Appraisal</h4>
+    <h4>Copy and paste the following magic text to learn how to get more Appraisal: <b><u>"Appraisal tips"</u></b></h4>
     <script>
         document.addEventListener("copy",(eve)=>{
             eve.clipboardData.setData(
